Update reference formatting and add new citation
Add Ryan Oates' paper on emergent consciousness in LLMs

--- a/refs.bib
+++ b/refs.bib
@@ -1,14 +1,21 @@
+{{REWRITTEN_CODE}}
 
 @article{tononi2008consciousness,
-  title={Consciousness as integrated information: a provisional manifesto},
+  title={Consciousness as Integrated Information: A Provisional Manifesto},
   author={Tononi, Giulio},
   journal={Biological Bulletin},
   year={2008}
 }
 
 @inproceedings{bengio2019meta,
-  title={A meta-transfer objective for learning to disentangle causal mechanisms},
+  title={A Meta-Transfer Objective for Learning to Disentangle Causal Mechanisms},
   author={Bengio, Yoshua and others},
   booktitle={NeurIPS},
   year={2019}
+}
+
+@article{ryan_oates,
+  title={Emergent Consciousness in Large Language Models: A Computational Framework},
+  author={Oates, Ryan},
+  doi={10.5281/zenodo.16319876}
 }
