Refine technical analysis and validation methodology in hybrid neuro-symbolic reasoning system. Remove redundant comments and enhance clarity in meta-optimization convergence section.

--- a/refs.bib
+++ b/refs.bib
@@ -17,3 +17,12 @@
   author={Oates, Ryan},
   doi={10.5281/zenodo.16319876}
 }
+
+@misc{oates2025ecmoe,
+  author       = {Oates, Ryan David},
+  title        = {Emergent Consciousness Meta-Optimization Equation (ECMOE): $\Psi(x) = \int[\alpha(t) S(x) + (1-\alpha(t)) N(x)] \times \exp(-[\lambda_1 R_{\mathrm{cognitive}} + \lambda_2 R_{\mathrm{efficiency}}]) \times P(H|E,\beta)\,dt$},
+  year         = {2025},
+  howpublished = {Zenodo},
+  doi          = {10.5281/zenodo.16444967},
+  url          = {https://doi.org/10.5281/zenodo.16444967},
+}
