Update author affiliations in multiple documents to remove university references, ensuring consistency across rebuttals and reports. This change reflects a shift in presentation while maintaining the integrity of the content related to academic attribution and investigations.

--- a/paper/tex/main.tex
+++ b/paper/tex/main.tex
@@ -17,7 +17,7 @@
 \title{\textbf{Recursive, Categorical Architectures for Consciousness-Aware AI: A Fractal Memory Approach}}
 
 \author[1]{Ryan Oates}
-\affil[1]{University of California, Santa Barbara (UCSB)\\ \texttt{ryan.oates@research.ucsb.edu}}
+\affil[1]{ ()\\ \texttt{ryan.oates@research..edu}}
 
 \date{}
 
